--- a/uimodule/webapp/view/Home.view.xml
+++ b/uimodule/webapp/view/Home.view.xml
@@ -15,6 +15,13 @@
 				showNavButton="true"
 				navButtonPress=".goToLogin"
 			>
+				<HBox>
+					<Image
+						src="icon/logo.png"
+						width="100%"
+						height="100%"
+					/>
+				</HBox>
 				<GenericTile
 					header="Ordini"
 					class="testClass sapUiTinyMarginTopBottom sapUiTinyMarginBegin"
