aggiunta la pagina di dettaglio prodotto Simone De Mutiis

--- a/uimodule/webapp/view/Home.view.xml
+++ b/uimodule/webapp/view/Home.view.xml
@@ -1,7 +1,7 @@
 <mvc:View controllerName="com.myorg.myUI5App.controller.Home" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:c="sap.ui.core" displayBlock="true" height="100%" busyIndicatorDelay="0">
   <Shell id="shellHome">
     <App id="app">
-      <Page id="pageTiles" title="" showNavButton="true" navButtonPress=".goToLogin">
+      <Page id="pageTiles" title="" showNavButton="true" navButtonPress="goToLogin">
         <customHeader>
           <Bar>
             <contentRight>
