--- a/uimodule/webapp/view/MainView.view.xml
+++ b/uimodule/webapp/view/MainView.view.xml
@@ -1,4 +1,4 @@
-<mvc:View xmlns:form="sap.ui.layout.form" controllerName="com.myorg.myUI5App.controller.MainView" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns:core="sap.ui.core" xmlns="sap.m">
+<mvc:View xmlns:form="sap.ui.layout.form" controllerName="com.myorg.myUI5App.controller.MainView" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
   <Shell id="shell">
     <App id="app">
       <pages>
@@ -17,7 +17,7 @@
           <content>
             <form:Form class="sapUiLargeMarginBeginEnd">
               <form:layout>
-                <form:ResponsiveGridLayout labelSpanXL="12" labelSpanL="12" labelSpanM="12" labelSpanS="12" adjustLabelSpan="false" emptySpanXL="0" emptySpanL="0" emptySpanM="0" emptySpanS="0" columnsXL="1" columnsL="1" columnsM="1" />
+                <form:ResponsiveGridLayout labelSpanXL="12" labelSpanL="12" labelSpanM="12" adjustLabelSpan="false" emptySpanXL="0" columnsXL="1" columnsL="1" />
               </form:layout>
               <form:formContainers>
                 <form:FormContainer>
