--- a/uimodule/webapp/view/Login.view.xml
+++ b/uimodule/webapp/view/Login.view.xml
@@ -1,4 +1,4 @@
-<mvc:View xmlns:form="sap.ui.layout.form" controllerName="com.myorg.myUI5App.controller.MainView" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
+<mvc:View xmlns:form="sap.ui.layout.form" controllerName="com.myorg.myUI5App.controller.Login" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
   <Shell id="shell">
     <App id="app">
       <pages>
